sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:17: error: not found: value aucntri
   if(aucntri ==0){return} 
      ^